[gd_scene load_steps=5 format=3 uid="uid://bfru26xs7uhmj"]

[ext_resource type="Script" uid="uid://dojtfgtjlrccf" path="res://Scripts/Menu/pause_menu.gd" id="1_i0al5"]
[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_jnmi5"]
[ext_resource type="PackedScene" uid="uid://dx25w13rsr5xr" path="res://Scenes/Menu/settings_menu.tscn" id="2_6pfc5"]
[ext_resource type="PackedScene" uid="uid://bbdqopeogorpk" path="res://Scenes/Menu/controls_menu.tscn" id="4_mux1j"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jnmi5")
script = ExtResource("1_i0al5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20392157, 0.20392157, 0.20392157, 0.38039216)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059000004
anchor_top = 0.296
anchor_right = 0.34500003
anchor_bottom = 0.632
offset_left = -3.9680023
offset_top = 17.192001
offset_right = -3.440033
offset_bottom = 21.46399
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Resume" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RESUME"

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"

[node name="Save and Quit" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SAVE_AND_QUIT"

[node name="SettingsMenu" parent="." instance=ExtResource("2_6pfc5")]
visible = false
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.19753087
anchor_right = 0.75
anchor_bottom = 0.79053074
grow_horizontal = 1
grow_vertical = 1

[node name="ControlsMenu" parent="." instance=ExtResource("4_mux1j")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -260.0
offset_right = 376.0
offset_bottom = 252.0

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Save and Quit" to="." method="_on_save_and_quit_pressed"]
[connection signal="closed" from="SettingsMenu" to="." method="_on_settings_menu_closed"]
[connection signal="closed" from="ControlsMenu" to="SettingsMenu" method="_on_controls_menu_closed"]
